# earthquake-app

./: README.md  SETUP_GUIDE.md  SPRINT.md  argocd-app.yaml  argocd-values.yaml  earthquake-app-folders.md  earthquake-app-top-folders.md  notes.md  prometheus-values.yaml  trivy-values.yaml
backend/: .gitignore  Dockerfile  README.md  TUTORIAL.md  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  usgs_client.py
earthquake-ui/: Dockerfile  package.json  pnpm-lock.yaml
earthquake-ui/components/: TimeFilter.txt  Timeline.module.css
frontend/: .gitignore  Dockerfile  README.md  TUTORIAL.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.jsx  page.jsx  page.module.css
frontend/app/api/earthquakes/: route.js
frontend/app/api/refresh/: route.js
frontend/components/: Timeline.jsx
frontend/lib/: api.js
helm/earthquake-app-chart/: Chart.yaml  HELM_GUIDE.md  values.yaml
helm/earthquake-app-chart/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  httproute.yaml  ingress.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  service.yaml  serviceaccount.yaml
next-ui/: README.md  package.json  pnpm-lock.yaml  tfc_data_UsgsEarthquake.js
scripts/: build-docker-images.sh  cluster.sh  create-docker-secrets.sh  setup-monitoring.sh  setup-security-stack.sh  teardown-monitoring.sh  teardown-security-stack.sh
(+1 files in other folders)
